# panda3d_imgui

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: Findpanda3d.cmake  windows_utils.cmake
panda3d_imgui/: panda3d_imgui.cpp  panda3d_imgui.hpp
panda3d_imgui/shader/: panda3d_imgui.frag.glsl  panda3d_imgui.vert.glsl
sample/: CMakeLists.txt
test_panda3d_imgui/: CMakeLists.txt  main.cpp
